Remove font of level-bar percentage do to alignment issue

--- a/src/layout/LevelBar/styles.scss
+++ b/src/layout/LevelBar/styles.scss
@@ -14,6 +14,7 @@
   width: 100%;
   height: 15px;
   display: flex;
+  margin-left: 2px;
 }
 
 .level-bar {
@@ -43,7 +44,8 @@
   }
   mix-blend-mode: difference;
   z-index: 100;
-  font-family: Suisseintl, sans-serif;
+  // Messes up alignment with levelbar percentage
+  //font-family: Suisseintl, sans-serif;
   font-weight: 700;
 }
 
